--- a/src/app/blacklist/blacklist.component.html
+++ b/src/app/blacklist/blacklist.component.html
@@ -1,4 +1,4 @@
-     <ng-container >
+     <ng-container  class="page-blacklist">
           <div class="filtro">
                <div class="cont-chips-title">
                     <!-- <h2>{{ 'dashboard.titulo' | translate }}</h2> -->
