--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -60,6 +60,10 @@
                                         
                                         <button mat-raised-button   class="login" type="submit"[disabled]="!forma.valid">Login</button>
                                         
+                                        
+                                        
+                                        <a mat-raised-button class="login-extra" (click)="logginExtra()">logginExtra</a>
+                                        
                                         <!-- <an-button [className]="'success'" type="submit">Log In</an-button> -->
 
 
