--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,17 +6,17 @@
      <mat-drawer-container class="left-container">
           <mat-drawer mode="side" class="sidenav" opened>
                
-               <p><button mat-button class="active-but">{{ 'dashboard.link1' | translate }}</button></p>
-               <p><button mat-button routerLink="/abc-atta">{{ 'dashboard.link2' | translate }}</button></p>
+                    <p><button mat-button class="active-but">{{  'abc-atta.sidebarlink1' | translate}}</button></p>
+                    <p><button mat-button routerLink="/abc-atta"  >{{  'abc-atta.sidebarlink2' | translate}}</button></p>
              
                
           </mat-drawer>
-          <mat-drawer-content class="content animated fadeIn" style="position: relative">
+          <mat-drawer-content class="content animated fadeIn page-dash" style="position: relative">
                <div class="contenedor-prin" >
                     <div class="content-body">
-                              <ul>
+                              <!-- <ul>
                                         <li  *ngFor="let item of this.apiUsers" >{{ item.nombre  }} - {{ item.idReclutador }}  - {{item.statusId}}  </li>
-                                   </ul>
+                                   </ul> -->
                               <ng-container >
                                    <div class="filtro">
                                         <div class="cont-chips-title">
@@ -272,7 +272,7 @@
                            
      
      
-                    <div style="min-height: 300px; margin-top:50px ;margin-bottom: 150px;">
+                    <div class="page-blacklist" style="min-height: 300px; margin-top:50px ;margin-bottom: 150px;">
                          <app-blacklist></app-blacklist>
 
                     </div>                  
